<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bg_input_form"
        app:title="Thông Tin Khách Hàng Khác">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:textSize="20sp"
            android:text="          Cung cấp thông tin giao nhận hàng cho chúng tôi để việc giao nhận hàng diễn ra một cách chính xác."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="20sp"
            android:textColor="@color/colorTextView"
            android:layout_marginTop="16dp"
            android:text="@string/ho_ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/editHoTen"
            android:hint="@string/hint_ho_ten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:text="@string/dia_chi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/editDiaChi"
            android:hint="@string/hint_dia_chi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:text="@string/sdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/editSDT"
            android:hint="@string/hint_sdt"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnXacNhan"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/button_text_xac_nhan"
            android:textColor="@color/colorTextView"
            android:textSize="20sp"
            android:background="@drawable/bg_input_layout_form"
            android:layout_width="150dp"
            android:layout_height="70dp" />
    </LinearLayout>

</LinearLayout>